[package]
name = "move-binary-format"
version = "0.0.3"
authors = [ "Diem Association <opensource@diem.com>",]
description = "Move Binary Format"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = [ "crates-io",]
edition = "2021"

[dependencies]
ref-cast = "1.0"
variant_count = "1.1"

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.4"

[features]
default = [ "std",]
fuzzing = [ "proptest", "proptest-derive", "arbitrary", "move-core-types/fuzzing",]
std = [ "anyhow/std", "move-core-types/std",]

[dependencies.anyhow]
workspace = true
default-features = false

[dependencies.proptest]
version = "1.2"
default-features = false
optional = true

[dependencies.proptest-derive]
version = "0.4"
default-features = false
optional = true

[dependencies.move-core-types]
workspace = true
default-features = false

[dependencies.serde]
workspace = true
default-features = false

[dependencies.arbitrary]
version = "1.3"
default-features = false
features = [ "derive",]
optional = true

[dependencies.hashbrown]
workspace = true
features = [ "ahash",]
default-features = false

[dev-dependencies.move-core-types]
workspace = true
features = [ "fuzzing",]

[dev-dependencies.serde_json]
workspace = true
