[package]
name = "move-command-line-common"
version = "0.1.0"
authors = [ "Diem Association <opensource@diem.com>",]
description = "Move shared command line and file tools"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
difference = "2.0.0"
walkdir = "2.3.1"
num-bigint = "0.4.0"
once_cell = "1.7.2"
dirs-next = "2.0.0"

[dependencies.anyhow]
workspace = true

[dependencies.sha2]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive",]

[dependencies.move-core-types]
workspace = true

[dependencies.move-vm-support]
workspace = true
